--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  font-family: Inter, system-ui, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: Helvetica, sans-serif;
   font-weight: 400;
+  line-height: 1.5;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
