--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .container {
-  margin: 10px auto;
-  width: 400px;
+  margin: 50px auto 0 auto;
+  width: 350px;
   height: 100%;
   background-color: aliceblue;
   border: 2px solid black;
