--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -3,9 +3,9 @@
   height: 100%;
   padding: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
   font-size: 18px;
   background-color: azure;
   color: black;
