--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .container {
   margin: 50px auto 0 auto;
-  width: 350px;
+  max-width: 320px;
   height: 100%;
   background-color: aliceblue;
   border: 2px solid black;
