--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  position: relative;
+}
+
 h1,
 h2,
 h3,
@@ -45,4 +49,33 @@ button {
   margin: 0;
   padding: 0;
   background-color: transparent;
+}
+
+.container {
+  min-width: 320px;
+  max-width: 375px;
+  padding: 0 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 16px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding: 0 100px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 0 120px;
+  }
 }
